# quantile-forest

./: .buildinfo  .gitignore  .pre-commit-config.yaml  AUTHORS  CONTRIBUTING  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  api.html  genindex.html  index.html  install.html  objects.inv  pre-commit-config.yaml  pyproject.toml  references.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  user_guide.html
.github/: dependabot.yml
.github/workflows/: build.yml  draft-pdf.yml  github-pages.yml  publish.yml  python-app.yml  python-publish.yml
_downloads/1207ba0d744ed1feaa106bb79ded4743/: plot_quantile_extrapolation_problem.ipynb
_downloads/2b41e84b8659661364c1e6ca9eeefd9a/: plot_quantile_weighted_vs_unweighted.ipynb
_downloads/46dc66a6c2405fb388ed6a2321a5e914/: plot_quantile_toy_example.py
_downloads/4707adff09fec0ab9181e1a30267677d/: plot_quantile_regression_intervals.ipynb
_downloads/47cf92cd2b46e3927ac30b6f4ad24c75/: plot_quantile_toy_example.ipynb
_downloads/686522fdbe379e1df6b826f09d545687/: plot_quantile_conformalized.ipynb
_downloads/8d6326cb2724f0a181e5eee594491564/: plot_quantile_weighted_vs_unweighted.py
_downloads/8f38324bcba516d98c5375d1ad7b38bd/: plot_quantile_regression_intervals.py
_downloads/9174d0f1aba94f4a6b797079e1bfbc83/: plot_quantile_multioutput.ipynb
_downloads/9692ea47a09c86e0bd5b0eaab224f0dd/: plot_quantile_interpolation.py
_downloads/972f82026f05bdd91ec5755a0e8a5403/: plot_quantile_extrapolation_problem.py
_downloads/a84db13c36521360bd27cb5093698a2f/: plot_quantile_vs_standard_forest.ipynb
_downloads/c207f81bef888578d9542a91738a445b/: plot_quantile_vs_standard_forest.py
_downloads/cf7a0c743e22634b5b6a152569efba36/: plot_quantile_conformalized.py
_downloads/f2441ec582697f00d85087f7c341acda/: plot_quantile_interpolation.ipynb
_sources/: api.rst.txt  index.rst.txt  install.rst.txt  sg_execution_times.rst.txt  user_guide.rst.txt
_sources/auto_examples/: index.rst.txt  plot_quantile_conformalized.rst.txt  plot_quantile_extrapolation_problem.rst.txt  plot_quantile_interpolation.rst.txt  plot_quantile_multioutput.rst.txt  plot_quantile_regression_intervals.rst.txt  plot_quantile_toy_example.rst.txt  plot_quantile_vs_standard_forest.rst.txt  plot_quantile_weighted_vs_unweighted.rst.txt  sg_execution_times.rst.txt
_sources/gallery/: index.rst.txt  plot_huggingface_model.rst.txt  plot_predict_custom.rst.txt  plot_proximity_counts.rst.txt  plot_qrf_conformalized_intervals.rst.txt  plot_qrf_custom_functions.rst.txt  (+21 more)
_static/: _image_hashes.json  documentation_options.js
auto_examples/: index.html  plot_quantile_conformalized.html  plot_quantile_extrapolation_problem.html  plot_quantile_interpolation.html  plot_quantile_multioutput.html  plot_quantile_regression_intervals.html  plot_quantile_toy_example.html  plot_quantile_vs_standard_forest.html  plot_quantile_weighted_vs_unweighted.html  sg_execution_times.html
docs/: Makefile  conf.py  index.rst  install.rst  references.rst  sphinx_requirements.txt  user_guide.rst
examples/: README.txt  __init__.py  plot_huggingface_model.py  plot_predict_custom.py  plot_proximity_counts.py  plot_qrf_conformalized_intervals.py  plot_qrf_custom_functions.py  plot_qrf_extrapolation.py  plot_qrf_huggingface_inference.py  plot_qrf_interpolation_methods.py  plot_qrf_multitarget.py  plot_qrf_prediction_intervals.py  plot_qrf_predictions.py  plot_qrf_proximity_counts.py  plot_qrf_quantile_ranks.py  plot_qrf_treeshap_explanations.py  plot_qrf_vs_rf_predictions.py  plot_quantile_conformalized.py  plot_quantile_example.py  plot_quantile_extrapolation.py  plot_quantile_extrapolation_problem.py  plot_quantile_interpolation.py  plot_quantile_intervals.py  plot_quantile_multioutput.py  plot_quantile_ranks.py  plot_quantile_regression_intervals.py  plot_quantile_toy_example.py  plot_quantile_vs_standard.py  plot_quantile_vs_standard_forest.py  plot_quantile_weighted_vs_unweighted.py  plot_quantile_weighting.py  plot_shap_example.py  plot_treeshap_example.py
gallery/: index.html  plot_predict_custom.html  plot_qrf_conformalized_intervals.html  plot_qrf_custom_functions.html  plot_qrf_extrapolation.html  plot_qrf_huggingface_inference.html  plot_qrf_interpolation_methods.html  plot_qrf_prediction_intervals.html  plot_qrf_predictions.html  plot_qrf_quantile_ranks.html  plot_qrf_treeshap_explanations.html  plot_quantile_conformalized.html  plot_quantile_example.html  plot_quantile_extrapolation.html  plot_quantile_interpolation.html  plot_quantile_intervals.html  plot_quantile_multioutput.html  plot_quantile_ranks.html  plot_quantile_vs_standard.html  plot_quantile_weighting.html  plot_shap_example.html  plot_treeshap_example.html
getting_started/: developers.html  installation.html
paper/: paper.bib  paper.md
quantile_forest/: __init__.py  _min_dependencies.py  _quantile_forest.py  _quantile_forest_fast.pxd  _quantile_forest_fast.pyx  _utils.pxd  _utils.pyx  version.txt
releases/: changes.html
user_guide/: fit_predict.html  introduction.html  proximities.html  quantile_ranks.html
(+36 files in other folders)
