[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools",
    "wheel",
    "Cython>=3.0a4",
    "numpy>=1.23",
    "scipy>=1.4",
    "scikit-learn>=1.0",
]

[tool.black]
line-length = 99
preview = true
target_version = ["py38", "py39", "py310", "py311", "py312"]

[tool.cython-lint]
ignore = ["E741"]
max-line-length = 99

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 99
multi_line_output = 3
use_parentheses = true
