[project]
name = "quantile-forest"
dynamic = ["version"]
description = "Quantile regression forests compatible with scikit-learn."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Zillow Group AI Team" }
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.4",
    "scikit-learn>=1.5",
]

[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython>=3.0a4",
    "numpy>=1.23",
    "scipy>=1.4",
    "scikit-learn>=1.5",
]

[tool.setuptools.dynamic]
version = { file = "quantile_forest/version.txt" }

[tool.black]
line-length = 99
preview = true
target_version = ["py39", "py310", "py311", "py312", "py313"]

[tool.cython-lint]
ignore = ["E741"]
max-line-length = 99

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 99
multi_line_output = 3
use_parentheses = true
