[options]
packages = find:

[options.packages.find]
include = quantile_forest*

[aliases]
test = pytest

[tool:pytest]
testpaths = quantile_forest
addopts =
    --doctest-modules
    --disable-pytest-warnings
    --color=yes

[flake8]
max-line-length = 100
ignore = E203, E266, E402, E501, W503
max-complexity = 19
select = B,C,E,F,W,T4,B9
exclude = 
  .git,
  build,
  __pycache__

[metadata]
description-file = README.md
license_file = LICENSE

[check-manifest]
# Ignore files missing in VCS.
ignore =
    quantile_forest/_quantile_forest_fast.pyx
    quantile_forest/_quantile_forest_fast.pyd
