[options]
packages = find:

[options.packages.find]
include = quantile_forest*

[aliases]
test = pytest

[tool:pytest]
testpaths = quantile_forest
addopts =
    --doctest-modules
    --disable-pytest-warnings
    --color=yes

[flake8]
max-line-length = 99
ignore = E203, E402, E731, W503
select = B,C,E,F,W,T4,B9
exclude =
    .git,
    build,
    __pycache__

[metadata]
description_file = README.md
license_files = LICENSE

[check-manifest]
# Ignore files missing in VCS.
ignore =
    quantile_forest/_quantile_forest_fast.pyx
    quantile_forest/_quantile_forest_fast.pyd
