[options]
packages = find:

[options.packages.find]
include = quantile_forest*

[aliases]
test = pytest

[tool:pytest]
addopts =
    --color=yes
    --disable-pytest-warnings
    --doctest-modules
testpaths = quantile_forest

[flake8]
exclude =
    .git,
    build,
    __pycache__
ignore = E203, E402, E731, W503
max-line-length = 99
select = B, B9, C, E, F, T4, W

[metadata]
description_file = README.md
license_files = LICENSE

[check-manifest]
# Ignore files missing in VCS.
ignore =
    quantile_forest/_quantile_forest_fast.pyx
    quantile_forest/_quantile_forest_fast.pyd
